fix z-index issues

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ hr {
   width: 300px;
   height: 300px;
   overflow: hidden;
-  left: 20%;
+  left: 15%;
   background-image: url('images/sunray.png');
   background-size: contain;
   animation: sunrise 100s linear infinite normal;
@@ -85,7 +85,7 @@ hr {
 
 .mario {
   position: absolute;
-  top: -40px;
+  top: -25%;
   left: 0px;
   z-index: 1;
   animation-name: drive;
@@ -98,7 +98,7 @@ hr {
 
 .luigi {
   position: absolute;
-  bottom: 25px;
+  top: 0%;
   left: 0px;
   z-index: 2;
   animation-name: drive;
